--- a/package.json
+++ b/package.json
@@ -19,37 +19,48 @@
   },
   "scripts": {
     "dev": "PORT=4000 nodemon",
-    "start": "node index.js"
+    "build": "tsc --build",
+    "prod": "tsc --build && node build/server.js"
   },
   "dependencies": {
+    "bufferutil": "^4.0.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "esm": "^3.2.25",
+    "eiows": "^3.7.3",
     "express": "^4.17.1",
-    "socket.io": "^2.4.1",
+    "random-animal-name": "^0.1.0",
+    "socket.io": "^4.3.1",
+    "utf-8-validate": "^5.0.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "nodemon": "2.0.14",
     "prettier": "2.4.1",
-    "prettier-eslint": "13.0.0"
+    "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.11.0",
+    "typescript": "4.4.4"
   },
   "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
     "env": {
-      "commonjs": true,
+      "es6": true,
       "node": true
     },
     "extends": [
-      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
       "plugin:prettier/recommended"
     ],
-    "parserOptions": {
-      "ecmaVersion": 12,
-      "sourceType": "module"
-    },
     "rules": {
       "prettier/prettier": [
         "error",
@@ -63,7 +74,6 @@
           "jsxSingleQuote": false,
           "trailingComma": "es5",
           "bracketSpacing": true,
-          "jsxBracketSameLine": false,
           "arrowParens": "always",
           "rangeStart": 0,
           "requirePragma": false,
@@ -73,7 +83,7 @@
           "endOfLine": "lf"
         }
       ],
-      "no-global-assign": "off"
+      "@typescript-eslint/ban-ts-comment": "off"
     }
   }
 }
